# VeriNode--Core

./: BLS_SECURITY_README.md  BRANCH_INFO.md  Cargo.toml  FINAL_VALIDATION_REPORT.md  FINAL_VERIFICATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  QUICK_START_GUIDE.md  README_COMMITTEE_REORG_FIX.md
src/: lib.rs
src/attestation/: bitfield.rs  bls_aggregator.rs  inclusion_tracker.rs  key_registry.rs  mod.rs  verifier.rs
src/attestation_core/: mod.rs
test_snapshots/: test_cannot_vote_for_own_request.1.json  test_create_proposal.1.json  test_create_proposal_fails_for_small_groups.1.json  test_double_voting_prevention.1.json  test_grace_period_prevents_late_fees.1.json  test_insufficient_voting_power.1.json  test_leniency_stats_tracking.1.json  test_max_vote_weight_enforcement.1.json  test_minimum_participation_requirement.1.json  test_proposal_execution.1.json  test_proposal_rejection_insufficient_majority.1.json  test_quadratic_vote_cost_calculation.1.json  test_quadratic_voting_enabled_for_large_groups.1.json  test_quorum_requirement.1.json  test_request_leniency.1.json  test_social_capital_tracking.1.json  test_vote_on_leniency_approval.1.json  test_vote_on_leniency_rejection.1.json  test_voting_period_expiration.1.json  test_voting_power_calculation.1.json
tests/: attestation_key_rotation_test.rs  bitfield_roundtrip_test.rs  bls_subgroup_test.rs  domain_separation_test.rs  exit_queue_ordering_test.rs  inclusion_delay_test.rs  leniency_voting_test.rs  quadratic_voting_test.rs  relay_deserialization_test.rs  reputation.rs
(+40 files in other folders)
