[package]
name = "sorosusu-contracts"
version = "0.1.0"
edition = "2021"
description = "Core logic for the VeriNode ROSCA protocol on Stellar"
license = "MIT"

[lib]
name = "sorosusu_contracts"
crate-type = ["cdylib", "rlib"] # Essential for WASM compilation and integration tests

[features]
testutils = []

[dependencies]
dlmalloc = { version = "0.2.14", features = ["global"] }
soroban-sdk = "21.0.0"

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }
arbitrary = { version = "=1.3.2", features = ["derive"] }
proptest = "1.4"

[profile.release]
opt-level = "z"   # Optimize for small binary size
lto = true
codegen-units = 1

[[test]]
name = "griefing_resistance_test"
path = "tests/slashing/griefing_resistance_test.rs"
